--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+        <title>pong</title>
         <script src="phaser.min.js"></script>
     </head>
     <body>
